monitor/thanos/thanos-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-0.cloudnative.ies.inventec
    http:
      paths:
      - backend:
          serviceName: prometheus-0-service
          servicePort: 8080

  - host: prometheus-1.cloudnative.ies.inventec
    http:
      paths:
      - backend:
          serviceName: prometheus-1-service
          servicePort: 8080

  - host: prometheus-2.cloudnative.ies.inventec
    http:
      paths:
      - backend:
          serviceName: prometheus-2-service
          servicePort: 8080

  - host: thanos-querier.cloudnative.ies.inventec
    http:
      paths:
      - backend:
          serviceName: thanos-querier
          servicePort: 9090
